headers/covers.h


typedef int CoveringType;
typedef struct RepresentationIntoSn     RepresentationIntoSn;
typedef struct
{
    int                     num_generators;
    int                     num_sheets;
    int                     num_cusps;
    RepresentationIntoSn    *list;
} RepresentationList;
struct RepresentationIntoSn
{
    int                     **image;
    int                     **primitive_Dehn_image;
    CoveringType            covering_type;
    RepresentationIntoSn    *next;
};
typedef int PermutationSubgroup;